Fixed notification text size and wrapping

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -563,7 +563,7 @@
   }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 410px) {
   .logoContainer {
     margin-left: 10px;
   }
